# unionai-docs

./: .ci-selftest-doc-1228  .cspell-project-words.txt  .env  .gitignore  .gitmodules  .link-checker-exclude  .link-checker-exclude.v1  .markdownlint-cli2.jsonc  .order  .redirects-exclude  404.html.tmpl  404.html.tmpl~flyte  404.inc.html~flyte  ADMIN.md  APIS.md  AUTHOR.md  CLAUDE.md  CLOUDFLARE_BUILD.md  CODEOWNERS  DEVELOPER.md  MIGRATION.md  Makefile  Makefile.api.flyte-sdk  Makefile.api.flytekit  Makefile.api.flytev2  Makefile.api.plugins  Makefile.api.sdk  Makefile.api.union  Makefile.api.unionv2  Makefile.backup  Makefile.cli.flyte  Makefile.cli.flytectl  Makefile.hugo-build  Makefile.jupyter  Makefile.original  PLAN-user-guide-rewrite.md  README - New Theme.md  README-LLM-DOCS.md  README.md  REDIRECTS.md  (+76 more)
.codex/: config.toml
.github/: README.md  copilot-instructions.md
benchmarks/: README.md  volume_benchmark.py
content/: 404.md  _index.md  index.md
content~example/: _index.md  test.md
data/: airflow.yaml  allowed_external.yaml  allowed_pages.yaml  allowed_pages~sample.yaml  async-fsspec.yaml  aws-athena.yaml  aws-batch.yaml  bigquery.yaml  comet-ml.yaml  connectors.yaml  dask.yaml  dbt.yaml  duckdb.yaml  envd.yaml  flyteinteractive.yaml  flytekit.yaml  flytesdk.yaml  greatexpectations.yaml  hive.yaml  huggingface.yaml  identity-aware-proxy.yaml  inference.yaml  k8s-pod.yaml  kf-mpi.yaml  kf-pytorch.yaml  kf-tensorflow.yaml  memray.yaml  mlflow.yaml  mmcloud.yaml  neptune.yaml  omegaconf.yaml  onnx-scikitlearn.yaml  openai.yaml  optuna.yaml  pages.yaml  pandera.yaml  papermill.yaml  polars.yaml  pytorch.yaml  ray.yaml  (+9 more)
extensions/: gen.py
include/: api.flyte-sdk.md  api.flytekit.md  api.flytev2.md  api.plugin.md  api.union.md  api.unionv2.md  cli.flyte.md  cli.flytectl.md  cli.uctl.md
infra/: Makefile.api.plugins  Makefile.api.sdk
layouts/: robots.txt
linkmap/: airflow-linkmap.json  anthropic-linkmap.json  async-fsspec-linkmap.json  bigquery-linkmap.json  codegen-linkmap.json  comet-ml-linkmap.json  dask-linkmap.json  databricks-linkmap.json  dbt-linkmap.json  duckdb-linkmap.json  envd-linkmap.json  flyteinteractive-linkmap.json  flytekit-linkmap.json  flytesdk-linkmap.json  gemini-linkmap.json  greatexpectations-linkmap.json  hitl-linkmap.json  hive-linkmap.json  huggingface-linkmap.json  hydra-linkmap.json  identity-aware-proxy-linkmap.json  inference-linkmap.json  jsonl-linkmap.json  kf-mpi-linkmap.json  kf-pytorch-linkmap.json  kf-tensorflow-linkmap.json  memray-linkmap.json  mlflow-linkmap.json  mmcloud-linkmap.json  neptune-linkmap.json  omegaconf-linkmap.json  onnx-scikitlearn-linkmap.json  openai-linkmap.json  optuna-linkmap.json  pandera-linkmap.json  papermill-linkmap.json  polars-linkmap.json  pytorch-linkmap.json  ray-linkmap.json  sglang-linkmap.json  (+7 more)
pre/: pre.py
scripts/: Caddyfile  README.md  _smoke_hello.py  build-combined.sh  build_dist.sh  check_images.sh  dev-pre-flight.sh  gen_404.sh  gen_build_info.sh  gen_proto_doc.sh  generate-helm-docs.sh  make_usage.sh  pre-build-checks.sh  pre-flight.sh  pyproject.toml  run_hugo.sh  run_hugo_ci.sh  selfmanaged_aws_e2e.py  selfmanaged_common.py  selfmanaged_gcp_e2e.py  serve.sh  smoke_tests.py  sync_content.sh  verify_public_separation.sh
scripts/helm-docs/: dataplane.md.gotmpl  knative-operator.md.gotmpl
source/: conf.py  deployment.md  faq.md  index.md  platform-architecture.md  quick-start.md  quickstart.md  union-and-flyte.md  union-overview.md
src/: index.js
static/: aws-athena-linkmap.json  aws-batch-linkmap.json  connectors-linkmap.json  dask-linkmap.json  flyte-v1-to-v2-migration-guide.md  (+21 more)
(+3045 files in other folders)
