[project]
name = "union-docs"
version = "1.1"
description = "union.ai documentation"
requires-python = ">=3.11"
dependencies = [
    "flytekitplugins-airflow",
    "flytekitplugins-awssagemaker",
    "flytekitplugins-bigquery",
    "flytekitplugins-mmcloud",
    "flytekitplugins-openai",
    "flytekitplugins-snowflake",
    "flytekitplugins-spark",
    "jinja2",
    "jupytext",
    "myst-parser",
    "nbformat",
    "pyyaml",
    "scikit-learn",
    "sphinx",
    "sphinx-click",
    "sphinx-design",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-docsearch",
    "sphinxext-remoteliteralinclude",
    "tensorflow",
    "torch",
    "union==0.1.104",
    "pdoc>=15.0.1",
    "html2text>=2024.2.26",
]
