[project]
name = "union-docs"
version = "1.2"
description = "union.ai documentation"
requires-python = ">=3.9,<3.13"
dependencies = [
    "flytekitplugins-airflow",
    "flytekitplugins-awssagemaker",
    "flytekitplugins-bigquery",
    "flytekitplugins-mmcloud",
    "flytekitplugins-openai",
    "flytekitplugins-snowflake",
    "flytekitplugins-spark",
    "jinja2",
    "jupytext",
    "myst-parser",
    "nbformat",
    "pyyaml",
    "scikit-learn",
    "sphinx",
    "sphinx-click",
    "sphinx-design",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-docsearch",
    "sphinxext-remoteliteralinclude",
    "tensorflow",
    "torch",
    "union",
]
